--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ html, body, div, section {
 
 body {
     background-color: rgb(247, 255, 232);
+    color: rgb(2, 22, 2);
     font-family: 'Asap Condensed', sans-serif;
     letter-spacing: 1px;
 }
@@ -23,7 +24,7 @@ a:hover, a:visited, a:active {
 }
 
 .main-heading {
-    background-color: rgb(3, 27, 3);
+    background-color: rgb(2, 22, 2);
     height: 24vh;
     width: 100%;
     display: flex;
@@ -73,27 +74,31 @@ nav:hover {
 
 .navbar {
     width: 100px;
-    padding-top: 5px;
-    padding: 5px 20px 0 40px;
+    /* padding-top: 5px; */
+    padding: 5px 20px 0 30px;
     margin-right: 0;
 
 }
 
 .navbar li {
-    margin: 1.1rem 0;
+    margin: 1.55rem 0;
+
     list-style: none;
-    font-size: 1.15em;
+    font-size: 1.1em;
     width: max-content;
+
+    padding-left: 5px;
     backface-visibility: hidden;
-    color: rgb(2, 14, 2);
+    color: rgb(2, 22, 2);
     transition: all 0.1s ease-in;
 
 }
 
 .navbar li:focus, .navbar li:hover {
     /* text-shadow: 2px 19px 0px rgba(243, 255, 217, 0.35); */
-    text-shadow: 4px 18px 0px rgb(243, 255, 217, 0.28);
-    transform: translateX(15px);
+    /* text-shadow: 4px 20px 0px rgba(248, 242, 208, 0.35); */
+    text-shadow: 4px 24px 1px rgb(243, 255, 217, 0.24);
+    transform: translateX(12px);
     /* color: rgb(243, 255, 217); */
 }
 
@@ -125,7 +130,11 @@ h2:first-of-type {
     margin-top: 70px;
 }
 
-
+/* @media screen (max-width: 1080px) {
+     h2 {
+         font-size: 80%;
+     }   
+} */
 
 .home-content p {
     color: rgb(4, 34, 4);
